# bigrafo-ED1

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.h  render.c  render.h  window.c  window.h
